[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/font_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/TileSelector.gd" type="Script" id=2]
[ext_resource path="res://fonts/font_button.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/BGs/WorldBuilder_BG.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	
	COLOR = texture(TEXTURE,UV);
	vec2 center_uv = UV - vec2(0.5);
	if (length(center_uv) > 0.5) {
		COLOR.a = 0.0;
	}
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="TileSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 608.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
color_spawn = Color( 0.443137, 0.921569, 1, 1 )
color_normal = Color( 0.756863, 1, 0.721569, 1 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGStack" type="ColorRect" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.9
mouse_filter = 2
color = Color( 0.368627, 0.368627, 0.368627, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxStack" type="GridContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.9
mouse_filter = 2
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGUsed" type="ColorRect" parent="."]
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
mouse_filter = 2
color = Color( 0.368627, 0.368627, 0.368627, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxUsed" type="GridContainer" parent="."]
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
mouse_filter = 2
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="ColorRect" parent="."]
self_modulate = Color( 0.482353, 0.482353, 0.482353, 1 )
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Center"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNormal" type="Button" parent="."]
anchor_left = 0.25
anchor_right = 0.45
anchor_bottom = 0.1
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 3 )
text = "Get Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSpawn" type="Button" parent="."]
anchor_left = 0.55
anchor_right = 0.75
anchor_bottom = 0.1
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 3 )
text = "Get Spawn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonReset" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.9
anchor_right = 0.6
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 3 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonNormal" to="." method="_on_ButtonNormal_pressed"]
[connection signal="pressed" from="ButtonSpawn" to="." method="_on_ButtonSpawn_pressed"]
[connection signal="pressed" from="ButtonReset" to="." method="_on_ButtonReset_pressed"]
